Post near-final draft.

--- a/mss.tex
+++ b/mss.tex
@@ -2,6 +2,8 @@
 
 \usepackage{ustj}
 
+\addbibresource{mss.bib}
+
 %  Make first page footer:
 \fancypagestyle{firststyle}{%
 \fancyhf{}% Clear header/footer
@@ -15,7 +17,7 @@
 %  Arrange subsequent pages:
 \fancyhf{}
 \fancyhead[LE]{{\urbitfont Urbit Systems Technical Journal}}
-\fancyhead[RO]{The Desert of the Reals:  Floating-Point Arithmetic on Deterministic Systems}
+\fancyhead[RO]{Floating-Point Arithmetic on Deterministic Systems}
 \fancyfoot[LE,RO]{\thepage}
 
 %%MANUSCRIPT
