--- a/mss.tex
+++ b/mss.tex
@@ -44,7 +44,7 @@ Floating-point operations are a technically complex subject and the extent to wh
 
 Modern digital computers deal, at their root, in binary representation, entirely zeros and ones.\footnote{Analog computers may operate on a continuum of value.  Computer logic systems may be architected on other numeric bases for their logic, such as the 1837 Analytical Engine's decimal system and the 1958 Setun's (Сетунь) ternary system.}  These are often formally considered to be whole numbers in a number base of two.  However, numerical calculations very frequently require the use of numbers with a fractional part to adequately represent the elements of a computation.
 
-Early numeric computing tended to focus on problems of interest to military and national security applications, such as partial differential equations and numerical optimization.  Such calculations typically involve arrays, and linear algebra was elaborated hand-in-hand with digital computing techniques in software and hardware.  Numerics assumed prominence for a wider audience with the rise of gaming on personal computers, although these algorithms emphasized speed over exactness.\footnote{This is reflected in algorithms such as the “fast inverse square root”, which permits a degree of inaccuracy in exchange for a substantial speedup.}  To this point in the history of computing, most software either ran on a single platform for its lifetime (as with supercomputing) or did not require portably deterministic algorithms (as with gaming).\footnote{To be clear, 3D gaming algorithms are deterministic (assuming no random sources are used), but exact error values are often not reproducible across platforms, nor was this a design criterion.  The reasons for this are discussed below.}
+Early numeric computing tended to focus on problems of interest to military and national security applications, such as partial differential equations and numerical optimization.  Such calculations typically involve arrays, and linear algebra was elaborated hand-in-hand with digital computing techniques in software and hardware.  Numerics assumed prominence for a wider audience with the rise of gaming on personal computers, although these algorithms emphasized speed over exactness.\footnote{This is reflected in algorithms such as the “fast inverse square root”, which permits a degree of inaccuracy in exchange for a substantial speedup.}  To this point in the history of computing, most software either ran on a single platform for its lifetime (as with supercomputing) or did not require portably deterministic algorithms (as with gaming).\footnote{To be clear, 3D gaming algorithms are deterministic (assuming no random sources are used), but exact error values are often not reproducible across platforms, nor was such portability a design criterion.  The reasons for this are discussed below.}
 
 On the other hand, deterministic computing describes the ability for a given computation be reproducible exactly.  Such reproducibility permits referential transparency and more powerful reasoning about a program's results and dependencies.  This includes, for Urbit as a state machine, that the event log replay be portable across platforms to yield the same result.  Conceptual guarantees must be backstopped by actual implementation guarantees for determinism to hold.
 
@@ -68,13 +68,13 @@ Early computer systems with floating-point units chose bespoke but incompatible 
 \begin{lstlisting}[style=listingcode]
 SEEE.EEEE.EFFF.FFFF.FFFF.FFFF.FFFF.FFFF
 \end{lstlisting}
-
+\noindent
 where \texttt{S} is the sign bit, \texttt{0} for positive ($+$) and \texttt{1} for negative ($-$); \texttt{E} is the exponent in base-2 (8 bits); and \texttt{F} is the significand (23 bits).  The exponent is actually calculated at an offset bias of 127 ($2^{7}$) so that a more expressive range of orders of magnitude can be covered.  The significand has an implied leading \texttt{1} bit unless all are zero.  To wit,
 
 $$
 (-1)^{\mathtt{S}} \times 2^{\mathtt{E}-127} \times 1.\mathtt{F}
 $$
-
+\noindent
 IEEE 754 specifies operations between numbers, including of different magnitudes.  The standard dictates behavior and provides outlines for arithmetic, but leaves algorithmic details to the implementation.  Numbers are normalized by adjusting the exponent of the smaller operand and aligning the significands, then the operations are carried out.  In practice, extended precision values are used in the intermediate steps of many algorithms, leading to greater accuracy than would otherwise be expected.\footnote{“Each of the computational operations that return a numeric result specified by this standard shall be performed as if it first produced an intermediate result correct to infinite precision and with unbounded range, and then rounded that intermediate result, if necessary, to fit in the destination’s format.”  \citep{IEEE754-2008}  Note that, per \citeauthor{Risse2016}, “there is no indication whether or not a computation with IEEE 754 is exact even if all arguments are.”  The ISO/IEC9899 C standard confesses its own fallibility:  “The floating-point model is intended to clarify the description of each floating-point characteristic and does not require the floating-point arithmetic of the implementation to be identical” \citep[fn.~21]{ISO9899}.}
 % https://www.iso.org/obp/ui/#iso:std:iso-iec:9899:ed-4:v1:en
 
@@ -260,7 +260,7 @@ Why SoftFloat?  Enter, stage left, the problem of platform-portable determinism.
 
 \section{Deterministic Computation with a Fractional Part}
 
-Non-real arithmetic is less significant for many of the core operations of Urbit as a personal server platform.  However, gaming, machine learning, graphics, and other applications rely on floating-point calculations—preferably as fast as possible.  In fact, not only applications-oriented processes rely on determinism:  guarantees in cryptography and contractual correctness for web3; verification and validation; and code correctness analysis all require reproducible determinism.\footnote{Support for IEEE 754 is similar for support for the Markdown markup language.  Many platforms support a subset of Markdown coupled with platform-specific extensions.  (See also SQL.)  Internal references, HTML, inline \LaTeX~math mode, code block language specification, and other features see varying levels of support with GitHub, Pandoc, Obsidian, and other editors and converters.}
+Non-real arithmetic is less significant for many of the core operations of Urbit as a personal server platform.  However, gaming, machine learning, graphics, and other applications rely on floating-point calculations—preferably as fast as possible.  In fact, not only applications-oriented processes rely on determinism:  guarantees in cryptography and contractual correctness for web3; verification and validation; accounting and legal compliance; and code correctness analysis all require reproducible determinism.\footnote{Support for IEEE 754 is similar for support for the Markdown markup language.  Many platforms support a subset of Markdown coupled with platform-specific extensions.  (See also SQL.)  Internal references, HTML, inline \LaTeX~math mode, code block language specification, and other features see varying levels of support with GitHub, Pandoc, Obsidian, and other editors and converters.}
 
 Why can't we just allow different results in the last binary places of the significand?  Philosophically, Urbit holds the following statements as bedrock truth \citep{Monk2020}:
 
@@ -508,7 +508,7 @@ Lagoon\footnote{Linear AlGebra in hOON} is an Urbit library to facilitate Hoon-n
 \noindent
 for which \lstinline[style=inlinecode]{%real} allows the rounding mode to be specified; \lstinline[style=inlinecode]{%cplx} consists of a pair of two values, real and imaginary parts; and \lstinline[style=inlinecode]{%fixp} requires the expected precision.
 
-Lagoon implements algorithmically correct reference implementation in Hoon with the expectation that \lstinline[style=inlinecode]{/lib/lagoon} will be jetted.  Operations include basic arithmetic, vector and matrix row/column operations, matrix multiplication, and matrix inversion.  The jetting scheme may take advantage of software libraries or appropriate hardware, but must hew to the dictum that “if it's not deterministic, it isn't real.”\footnote{It is a worth a final digression to address reproducibility on parallel systems.  We do not consider this a design goal for Lagoon at the current time, since Urbit is inherently single-threaded.  Operations like reduction must take place on a single computer; while jets may in principle utilize parallelism their points of entry and exit are unique.  However, we note that the \texttt{ReproBLAS} project has addressed this issue in the context of reproducible parallelism \citep{ReproBLAS}, as has \citeauthor{Chohra2016}}  % no period for et al.
+Lagoon implements algorithmically correct reference implementation in Hoon with the expectation that \lstinline[style=inlinecode]{/lib/lagoon} will be jetted.  Operations include basic arithmetic, vector and matrix row/column operations, matrix multiplication, and matrix inversion.  The jetting scheme may take advantage of software libraries or appropriate hardware, but must hew to the dictum that “if it's not deterministic, it isn't real.”\footnote{It is a worth a final digression to address reproducibility on parallel systems.  We do not consider this a design goal for Lagoon at the current time.  Operations like reduction take place on a single computer; while jets may in principle utilize parallelism their points of entry and exit are unique.  However, we note that the \texttt{ReproBLAS} project has addressed this issue in the context of reproducible parallelism \citep{ReproBLAS}, as has \citeauthor{Chohra2016}}  % no period for et al.
 
 Lagoon has passed through several implementations and remains in active development.  The current implementation is the \texttt{lagoon} branch of the \texttt{urbit/urbit} repository \citep{Urbit}.
 
@@ -526,7 +526,7 @@ To summarize, the most promising solutions for floating-point mathematics on Urb
   \item  Replacing IEEE 754 with another approach of sufficient speed, fixed-point and unum/posits chief among these.
 \end{enumerate}
 
-Several recent efforts on Urbit have encountered the difficulties of producing fast and reliable floating-point calculations on a Nock-based system.\footnote{UWasm or UrWasm, which as a WebAssembly implementation directly relies on floating-point computations \citep{UWasm} (see e.g. \citet{KloudKoder2022} for a discussion of the issues involved); \texttt{lazytrig}, which is slow and implemented purely in Hoon (Nock); Lagoon, which includes IEEE 754 operations with its linear algebra library (\emph{q.v.}); and MNIST.}  We anticipate that, water finding its own level, each will adopt a suitable deterministic solution for evaluation in Nock.  We do not anticipate these to be the last foundational numerical libraries built on Urbit, but instead among the first.  Thus we have documented the paths we have explored as an annotated map for future travelers in search of a one true representation for continuous mathematics.
+Several recent efforts on Urbit have encountered the difficulties of producing fast and reliable floating-point calculations on a Nock-based system.\footnote{UWasm or UrWasm, which as a WebAssembly implementation directly relies on floating-point computations \citep{UWasm} (see e.g. \citet{KloudKoder2022} for a discussion of the issues involved); \texttt{lazytrig}, which is slow and implemented purely in Hoon (Nock); Lagoon, which includes IEEE 754 operations with its linear algebra library (\emph{q.v.}); and MNIST.}  We anticipate that, water finding its own level, each will adopt a suitable deterministic solution for evaluation in Nock.  We do not anticipate these to be the last foundational numerical libraries built on Urbit, but instead among the first.  Thus we have documented the paths we have explored as an annotated map for future travelers in search of a one true representation for continuous mathematics. \tombstone{}
 
 \printbibliography
 \end{document}
